--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{font-family: 'Montserrat', sans-serif;}
     font-size: 15px;
 }
 
-#objective h3, #education h3, #work h3, #bio-data h3 {
+#objective h3, #education h3, #work h3, #bio-data h3, #skills h3, #interests h3 {
     border: 1px solid #d3d3d3;
     text-transform: uppercase;
     padding: 5px;
@@ -53,7 +53,7 @@ body{font-family: 'Montserrat', sans-serif;}
     margin: 30px 0 10px;
 }
 
-#objective p, #education table td, #work table td, #bio-data table td {
+#objective p, #education table td, #work table td, #bio-data table td, #skills ul li, #interests ul li {
     padding: 5px;
     font-size: 14px;
     color: #000;
@@ -83,15 +83,10 @@ body{font-family: 'Montserrat', sans-serif;}
 }
 
 #skills, #interests {
-    padding: 10px 0;
+    background: #e8f0fe;
+    padding: 10px;
+    border-radius: 5px;
     margin-top: 20px;
-}
-
-#skills h3, #interests h3 {
-    color: #27aae1;
-    font-weight: bold;
-    border-bottom: 2px solid #27aae1;
-    display: inline-block;
 }
 
 #skills ul, #interests ul {
