--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body{font-family: 'Montserrat', sans-serif;}
     border-radius: 5px;
     margin: 30px 0 10px;
     background: #e8f0fe;
+    border-bottom: 1px solid #d3d3d3;
 }
 
 #objective p, #education table td, #work table td, #bio-data table td, #skills ul li, #interests ul li {
@@ -87,6 +88,8 @@ body{font-family: 'Montserrat', sans-serif;}
     background: #e8f0fe;
     padding: 10px;
     margin-top: 30px;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
 }
 
 #skills h3, #interests h3 {
@@ -94,6 +97,7 @@ body{font-family: 'Montserrat', sans-serif;}
     color: #1e73be;
     padding: 5px;
     margin: 0;
+    border-bottom: 1px solid #d3d3d3;
 }
 
 #skills ul, #interests ul {
